--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -57,7 +57,7 @@ spec:
         "beta.kubernetes.io/os": linux
       containers:
       - name: azure-vote-front
-        image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
+        image: mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:1b23470a20f9961ea69f4707c5a53ab97cc30dbb
         ports:
         - containerPort: 80
         resources:
