--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
         id: login
         uses: azure/login@v1.4.3
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.SERVICE_PRINCIPAL }}
+          tenant-id: ${{ secrets.TENANT }}
+          subscription-id: ${{ secrets.SUBSCRIPTION }}
       - name: Set AKS context
         id: set-context
         uses: azure/aks-set-context@v3
