--- a/azure-vote-all-in-one-redis.yaml
+++ b/azure-vote-all-in-one-redis.yaml
@@ -57,7 +57,7 @@ spec:
         "beta.kubernetes.io/os": linux
       containers:
       - name: azure-vote-front
-        image: mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:a6e6198d89538eaa7b0e5a6bf48213f47874a13f
+        image: mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:latest
         ports:
         - containerPort: 80
         resources:
