--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,9 @@ jobs:
         id: deploy-aks
         uses: Azure/k8s-deploy@v4
         with:
+        
           namespace: 'default'
           manifests: |
              manifest/deployment.yaml
-          images: mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:${{ github.sha }}'
+          images: 'mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:${{ github.sha }}'
           pull-images: false
