--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
           namespace: 'default'
           manifests: |
              manifest/deployment.yaml
-          images: 'mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:${{ github.sha }}'
-          pull-images: false
+          images: '${{ secrets.registry }}.azurecr.io/${{ secrets.repository }}/azure-vote-front:${{ github.sha }}'
+          pull-images: false 
