--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,5 @@ jobs:
           namespace: 'default'
           manifests: |
              manifest/deployment.yaml
-          images: 'mcsfusionacr.azurecr.io/azuredocs/azure-vote-front:7662a482e18214610d0034ce2d4a1af16147743b'
+          images: '${{ secrets.registry }}.azurecr.io/${{ secrets.repository }}/azure-vote-front:${{ github.sha }}'
           pull-images: true 
