--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -79,3 +79,19 @@ spec:
   - port: 80
   selector:
     app: azure-vote-front
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: azure-vote-front
+  annotations:
+    kubernetes.io/ingress.class: azure/application-gateway
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /
+            backend:
+              serviceName: azure-vote-front
+              servicePort: 80
