--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -81,7 +81,7 @@ spec:
     app: azure-vote-front
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: azure-vote-front
