--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -89,9 +89,12 @@ metadata:
     kubernetes.io/ingress.class: azure/application-gateway
 spec:
   rules:
-    - http:
-        paths:
-          - path: /
-            backend:
-              serviceName: azure-vote-front
-              servicePort: 80
+  - http:
+      paths:
+      - path: /vote/
+        backend:
+          service:
+            name: azure-vote-front
+            port:
+              number: 80
+        pathType: Exact
